# tafqeet-py

./: README.md  main.py  pyproject.toml  setup.cfg  setup.py  test.py
tafqeet/: __init__.py  tafqeet.py
