[metadata]
name = tafqeet
version = 1.0.1
author = nader
author_email = nadernabilmansour@gmail.com
description = A simple Python package
long_description = python pkg for converting numbers to arabic words
long_description_content_type = text/markdown
project_urls =
    repository = https://github.com/Nadern96/tafqeet-py
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.7

[options.packages.find]
where = src